infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
  labels:
    app: ticketing-orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-orders
  template:
    metadata:
      labels:
        app: ticketing-orders
    spec:
      containers:
        - name: orders
          image: cowculator99/ticketing-orders:latest
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: ticketing-orders
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
