infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
  labels:
    app: ticketing-tickets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-tickets
  template:
    metadata:
      labels:
        app: ticketing-tickets
    spec:
      containers:
        - name: tickets
          image: cowculator99/ticketing-tickets:latest
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-service
spec:
  selector:
    app: ticketing-tickets
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
